# Ai_Video_Replication

./: .compose_config_check.txt  .env  .env.example  README.md  alembic.ini  baseline_gate_verdict.json  docker-compose.yml  pyproject.toml  tmp_compile_dispatch_probe.py  tmp_health_probe.py  tmp_minio_buckets_probe.py  tmp_minio_settings_probe.py  tmp_relay_smoke_apifox_test.json  tmp_relay_smoke_real.json  tmp_relay_smoke_token_retry.json  tmp_relay_smoke_veo_3_1_fast.json  tmp_relay_video_only_validation.json  tmp_render_image_smoke.py  tmp_runtime_terminal_self_check.json  tmp_v8_audio_probe.py  tmp_v8_object_probe.py
.artifacts/: build_summary.txt
.evidence/: regression_cases_index.json
ai_videos_replication.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: main.py  web_ui.py
docker/: app.Dockerfile  worker.Dockerfile
docs/: baseline_gate_first_run_playbook.md  baseline_gate_preflight_record_template.md  database_and_migrations.md  eighth_batch_implementation_preparation.md  eighth_batch_render_image_smoke_runbook.md  fifth_batch_engineering_notes.md  fourth_batch_engineering_notes.md  long_video_replication_design_for_cursor.md  mvp_boot_notes.md  repeatability_report_v8.md  second_batch_engineering_notes.md  seventh_batch_engineering_notes.md  sixth_batch_engineering_notes.md  third_batch_engineering_notes.md
migrations/: env.py  script.py.mako
scripts/: baseline_gate.py  blueprint_self_check.py  case_001_gemini_duration_matrix.py  case_001_real_run_collect.py  export_blueprint_schema.py  regression_suite.py  relay_smoke.py  (+2 more)
tests/: README.md  (+15 more)
(+346 files in other folders)
