[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-videos-replication"
version = "0.1.0"
description = "Governance-centric control plane for reusable TikTok commerce video replication workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "alembic>=1.13.2",
  "celery[redis]>=5.4.0",
  "redis>=5.0.8",
  "minio>=7.2.8",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "google-genai>=1.30.0"
]

[tool.setuptools.packages.find]
include = ["app*"]
